@@ -94,7 +94,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
-            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+            <argLine>-XX:+EnableDynamicAgentLoading -Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
       </plugin>
       <plugin>
